@@ -484,6 +484,8 @@ Other Changes
 
 * SOLR-3302: Upgraded SLF4j to version 1.6.4 (hossman)
 
+* SOLR-3322: Add more context to IndexReaderFactory.newReader (ab)
+
 Documentation
 ----------------------
 
